<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/quiz_date_time_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/category_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:textSize="16sp"
            android:text="@string/email_address_or_mobile_number"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_purple_bg"
            android:ems="10"
            android:hint="@string/enter_email_or_mobile"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:textSize="16sp"
            android:text="@string/password"
            android:textColor="#bfbfbf" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_purple_bg"
                android:cursorVisible="true"
                android:ems="10"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/rememberMeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/remember_me"
            android:checked="true"
            android:textColor="@color/white"
            app:buttonTint="@color/white" />

    </LinearLayout>

<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:id="@+id/constraintLayout2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="24dp"-->
<!--        android:layout_marginEnd="24dp"-->
<!--        android:layout_marginBottom="80dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent">-->

<!--        <View-->
<!--            android:id="@+id/view_one"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="1dp"-->
<!--            android:background="@color/light_grey"-->
<!--            app:layout_constraintBottom_toBottomOf="@+id/or_sign_up_tv"-->
<!--            app:layout_constraintEnd_toStartOf="@id/or_sign_up_tv"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="@+id/or_sign_up_tv" />-->

<!--        <TextView-->
<!--            android:id="@+id/or_sign_up_tv"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="16dp"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            android:text="@string/or_log_in_with"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="13sp"-->
<!--            android:textStyle="bold"-->
<!--            app:layout_constraintEnd_toStartOf="@id/view_two"-->
<!--            app:layout_constraintStart_toEndOf="@id/view_one"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

<!--        <View-->
<!--            android:id="@+id/view_two"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="1dp"-->
<!--            android:background="@color/light_grey"-->
<!--            app:layout_constraintBottom_toBottomOf="@+id/or_sign_up_tv"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toEndOf="@id/or_sign_up_tv"-->
<!--            app:layout_constraintTop_toTopOf="@+id/or_sign_up_tv" />-->

<!--        <FrameLayout-->
<!--            android:id="@+id/fb_login_container"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toStartOf="@+id/google_log_in_button"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/or_sign_up_tv">-->

<!--            <com.facebook.login.widget.LoginButton-->
<!--                android:id="@+id/login_button_fb"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="24dp"-->
<!--                android:layout_marginEnd="12dp"-->
<!--                android:visibility="invisible"-->
<!--                android:padding="12dp"-->
<!--                />-->

<!--            <com.google.android.material.button.MaterialButton-->
<!--                android:id="@+id/fb_log_in_button"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="24dp"-->
<!--                android:layout_marginEnd="12dp"-->
<!--                android:drawableLeft="@drawable/facebook"-->
<!--                android:padding="12dp"-->
<!--                android:text="@string/facebook"-->
<!--                android:textAllCaps="false"-->
<!--                android:textColor="@color/black"-->
<!--                app:backgroundTint="@color/white"-->
<!--                app:cornerRadius="16dp" />-->

<!--        </FrameLayout>-->

<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:id="@+id/google_log_in_button"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="12dp"-->
<!--            android:layout_marginTop="24dp"-->
<!--            android:padding="12dp"-->
<!--            android:text="@string/google"-->
<!--            android:textAllCaps="false"-->
<!--            android:textColor="@color/black"-->
<!--            app:backgroundTint="@color/white"-->
<!--            app:cornerRadius="16dp"-->
<!--            android:drawableLeft="@drawable/google"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toEndOf="@+id/fb_login_container"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/or_sign_up_tv" />-->
<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

    <TextView
        android:id="@+id/forgotPassTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:padding="16dp"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/yellow"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/forgotPassTv"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout" />
    <ProgressBar
        android:id="@+id/loginProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/forgotPassTv"
        app:layout_constraintEnd_toEndOf="@+id/forgotPassTv"
        app:layout_constraintStart_toStartOf="@+id/forgotPassTv" />
</androidx.constraintlayout.widget.ConstraintLayout>